# reason-ecosystem

./: .gitignore  CEO_PLAN_INTEGRATED.md  Dockerfile  LICENSE  README.md  STRUCTURE.md  Scooter-master-design-20260329-092313.md  Scooter-unknown-design-20260401-155751-finance-threshold-fix.md  Scooter-unknown-design-20260401-155751-reason-py-cli.md  bootstrap.py  docker-compose.yml  docker-entrypoint.sh  install.py  package.py  pyproject.toml  rdn_launcher.py  repo-mode.json  setup.py
agent/: warf_ecosystem_client.py  warf_mcp_server.py
docs/: CANONICAL.md
examples/: README.md
gui/: app.py
ietf-drafts/: README.md  draft-reason-uri-00.md  draft-westerbeck-reason-protocol-01.txt
legacy-operator/: README.md  package.py
legacy-operator/gui/: app.py
legacy-operator/handoff/: protocol.py  sync.py
legacy-operator/network/: client.py
legacy-operator/node/: __init__.py  server.py
legacy-operator/tests/: test_client.py  test_private_node.py  test_sync.py
rdn/: __init__.py  cli.py  client.py  dash.py  reason.py
rdn/core/: __init__.py
rdn/handoff/: __init__.py  _pcf.py  engine.py  fingerprint.py  protocol.py  sync.py
rdn/mcp/: __init__.py  server.py
rdn/node/: __init__.py  server.py
tests/: test_coherent_memory.py
